--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,33 +1,37 @@
 body {
     font-family: 'Roboto', sans-serif;
-<<<<<<< HEAD
+
 }
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+
 }
 
 a {
-    text-decoration: none;
     color: #5a5a5a;
+    text-decoration: none;
+
 }
 
 img {
     cursor: pointer;
+
 }
 
 .flex-div {
-    display: flex;
     align-items: center;
+    display: flex;
+
 }
 
 .nav {
-    padding: 10px 2%;
-    justify-content: space-between;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    justify-content: space-between;
+    padding: 10px 2%;
     position: sticky;
     top: 0;
     z-index: 10;
@@ -35,50 +39,54 @@ img {
 }
 
 .nav-right i {
-    width: 0.625rem;
-    margin-right: 1.5625rem;
     cursor: pointer;
+    margin-right: 1.5625rem;
+    width: 0.625rem;
+
 }
 
 .nav-right {
-    width: 0.4375rem;
     margin-right: 7.5rem;
+    width: 0.4375rem;
+
 }
 
-.nav-left .manu {
-    width: 1.375rem;
+.nav-left .menu {
     margin-right: 1.5625rem;
+    width: 0.375rem;
+
 }
 
 .user {
-    width: 2.8125rem;
     border-radius: 50%;
     margin-right: 0;
+    width: 2.8125rem;
+
 }
 
 .logo {
-    height: 2.5rem;
+    height: 2.2rem;
     margin: -4px 20px 0;
+
 }
 
 .nav-middle .search {
     border: 1px solid #ccc;
+    border-radius: 1.875rem;
     margin-right: 0.9375rem;
     padding: 0.5rem 0.75rem;
-    border-radius: 1.875rem;
 
 }
 
 .nav-middle .search input {
-    width: 25rem;
+    background-color: transparent;
     border: 0;
     outline: 0;
-    background-color: transparent;
+    width: 25rem;
 
 }
 
 .mic {
-    height: 1.5625rem;
-=======
->>>>>>> 938acdb79b968aa71b78166c9b16a7022361cbd3
+    width: 6rem;
+
 }
