--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,98 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
+}
+
+a {
+    color: #5a5a5a;
+    text-decoration: none;
+
+}
+
 body {
     font-family: 'Roboto', sans-serif;
+
 }
+
+
+.flex-div {
+    align-items: center;
+    display: flex;
+
+}
+
+img {
+    cursor: pointer;
+
+}
+
+.logo {
+    height: 2.2rem;
+    margin: -4px 20px 0;
+
+}
+
+.mic {
+    width: 6rem;
+
+}
+
+.nav {
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    justify-content: space-between;
+    padding: 10px 2%;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+
+}
+
+.nav-right i {
+    cursor: pointer;
+    margin-right: 1.5625rem;
+    width: 0.625rem;
+
+}
+
+.nav-right {
+    margin-right: 7.5rem;
+    width: 0.4375rem;
+
+}
+
+.nav-left .menu {
+    margin-right: 1.5625rem;
+    width: 0.375rem;
+
+}
+
+.nav-middle .search {
+    border: 1px solid #ccc;
+    border-radius: 1.875rem;
+    margin-right: 0.9375rem;
+    padding: 0.5rem 0.75rem;
+
+}
+
+.nav-middle .search input {
+    background-color: transparent;
+    border: 0;
+    outline: 0;
+    width: 25rem;
+
+}
+
+.user {
+    border-radius: 50%;
+    margin-right: 0;
+    width: 2.8125rem;
+
+}
+
+
+
+
+
