--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -23,6 +23,16 @@ body {
 
 }
 
+.foot {
+    color: #5a5a5a;
+    size: 0.2rem;
+}
+
+.foot small{
+    cursor: pointer;
+    
+}
+
 img {
     cursor: pointer;
 
@@ -36,6 +46,28 @@ img {
 
 .mic {
     width: 6rem;
+
+}
+
+.more a i {
+    height: 30px;
+    margin-right: 5px;
+    width: 30px;
+
+}
+
+.more a {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: fit-content;
+
+}
+
+.more a p {
+    margin-top: 0.5rem;
 
 }
 
@@ -85,14 +117,113 @@ img {
 
 }
 
+.sidebar {
+    background: #fff;
+    height: 100%;
+    overflow: auto;
+    padding-left: 2%;
+    padding-top: 80px;
+    position: fixed;
+    top: 0;
+    width: 19%;
+
+}
+
+.subscribe a {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    width: fit fit-content;
+}
+
+.subscribe a p {
+    margin: 10px 15px;
+
+}
+
+.subscribe a img {
+    border-radius: 50%;
+    margin: 0;
+    margin-right: 5px;
+    width: 37px;
+
+}
+
+
+.short a {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    width: fit-content;
+
+}
+
+.sidebar .short a i {
+    height: 30px;
+    margin-right: 20px;
+    width: 30px;
+
+}
+
+.short a:first-child {
+    color: red;
+
+}
+
+.sidebar hr {
+    background: #ccc;
+    border: 0;
+    height: 1px;
+
+}
+
+.subscribe {
+    color: #5a5a5a;
+    font-size: 15px;
+    margin: 30px 0;
+
+}
+
+/* review */
+
+.small-sidebar .subscribe {
+    display: none;
+}
+
+.small-sidebar .more {
+display: none;
+
+}
+.small-sidebar .foot{
+    display: none;
+
+}
+.small-sidebar {
+    width: 10%;
+
+}
+
+.small-sidebar a p {
+    display: none;
+
+}
+
+.small-sidebar h3 {
+    display: none;
+
+}
+
+.small-sidebar hr {
+    display: none;
+
+}
+
 .user {
     border-radius: 50%;
     margin-right: 0;
     width: 2.8125rem;
 
 }
-
-
-
-
-
